cmake_minimum_required(VERSION 3.28)

add_executable(minimal_server MinimalServer.cpp)
add_executable(minimal_client MinimalClient.cpp)
add_executable(client_socket_test ClientTestSocket.cpp ClientTestSocket.h)
add_executable(server_socket_test ServerTestSocket.cpp ServerTestSocket.h)

target_link_libraries(minimal_server PRIVATE SocketWire)
target_link_libraries(minimal_client PRIVATE SocketWire)
target_link_libraries(client_socket_test PRIVATE SocketWire)
target_link_libraries(server_socket_test PRIVATE SocketWire)